# OptionCalcParallel

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  launch_docker.sh
docker/: Dockerfile
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt  example.cpp
include/OptionCalcParallel/: EquityPriceGenerator.h  MCEuroOptPricer.h
src/: CMakeLists.txt  EquityPriceGenerator.cpp  MCEuroOptPricer.cpp
tests/: CMakeLists.txt  test_OptionCalcParallel.cpp
